--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Seokho Son
 # [조건부수정] 네비게이션 바에 포함되는 항목 (명칭 수정, 추가, 삭제 가능)
 # 예를 들어 ETRI 라는 항목을 네비게이션 바에 추가하고 싶은 경우, etri.md 파일 생성 후 ETRI: "etri" 라고 지정.
 navbar-links:
-  Research Career: "career"
+  Career: "career"
   Publication: "publication"
   Blog: "blog"
   GitHub Profile: "https://github.com/seokho-son"
