--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ navbar-links:
   Career: "career"
   Publication: "publication"
   Blog: "blog"
-  GitHub Profile: "https://github.com/seokho-son"
+  GitHub: "https://github.com/seokho-son"
   Google Scholar: "https://scholar.google.com/citations?user=seokhoson"
 
 
