--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Seokho Son
 navbar-links:
   Career: "career"
   Publication: "publication"
-  Project: "blog"
+  Blog: "blog"
   GitHub: "https://github.com/seokho-son"
   Google Scholar: "https://scholar.google.com/citations?user=seokhoson"
 
