Test multiple blogs on one site

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ navbar-links:
   Career: "career"
   Publication: "publication"
   Blog: "blog"
+  Project: "project"
   GitHub: "https://github.com/seokho-son"
   Google Scholar: "https://scholar.google.com/citations?user=seokhoson"
 
